; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_shell.c_XferCanceller.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_shell.c_XferCanceller.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@gGotSig = common dso_local global i32 0, align 4
@gConn = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@gCancelCtrl = common dso_local global i32 0, align 4
@gMayBackToTopJmp = common dso_local global i64 0, align 8
@gBackToTopJmp = common dso_local global i32 0, align 4
@SIGINT = common dso_local global i32 0, align 4
@SIG_DFL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @XferCanceller(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  store i32 %3, i32* @gGotSig, align 4
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gConn, i32 0, i32 0), align 8
  %5 = icmp sgt i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  store i32 1, i32* @gCancelCtrl, align 4
  %7 = load i64, i64* @gMayBackToTopJmp, align 8
  %8 = icmp sgt i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %6
  %10 = load i32, i32* @gBackToTopJmp, align 4
  %11 = call i32 @longjmp(i32 %10, i32 1)
  br label %12

12:                                               ; preds = %9, %6
  br label %13

13:                                               ; preds = %12, %1
  %14 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gConn, i32 0, i32 0), align 8
  %15 = add nsw i64 %14, 1
  store i64 %15, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @gConn, i32 0, i32 0), align 8
  ret void
}

declare dso_local i32 @longjmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
